Lots of good stuff

--- a/.env_example
+++ b/.env_example
@@ -6,7 +6,8 @@ SERVER_PORT=1337
 
 # The port on which to run the client bundle dev server (i.e. used during
 # development only).
-CLIENT_DEVSERVER_PORT=7331
+# NOT WORKING YET
+# CLIENT_DEVSERVER_PORT=7331
 
 
 PIMATIC_HOST=localhost
