--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "glob": "^7.1.1",
     "graphql-relay": "^0.5.1",
     "node-sass": "^4.4.0",
+    "npm-install-webpack-plugin": "^4.0.4",
     "purifycss-webpack": "^0.4.2",
     "sass-loader": "^4.1.1",
     "style-loader": "^0.13.1",
@@ -62,6 +63,7 @@
   "scripts": {
     "start-server-dev": "NODE_ENV=development coffee server/index.coffee",
     "start-server-prod": "NODE_ENV=production coffee server/index.coffee",
-    "build-editor": "webpack -p --config ./webpack/client.prod.coffee"
+    "build-editor": "webpack -p --config ./webpack/client.prod.coffee",
+    "start": "npm run build-editor && npm run start-server-prod"
   }
 }
