--- a/package.json
+++ b/package.json
@@ -8,7 +8,6 @@
   "license": "MIT",
   "dependencies": {
     "101": "^1.6.2",
-    "@blueprintjs/core": "^1.7.0",
     "body-parser": "^1.16.0",
     "compression": "^1.6.2",
     "dotenv": "^4.0.0",
@@ -41,9 +40,11 @@
     "teact": "^1.2.0"
   },
   "devDependencies": {
+    "@blueprintjs/core": "^1.7.0",
     "clean-webpack-plugin": "^0.1.15",
     "coffee-loader": "^0.7.2",
     "css-loader": "^0.26.1",
+    "express": "^4.14.1",
     "extract-text-webpack-plugin": "^2.0.0-rc.2",
     "file-loader": "^0.10.0",
     "getenv": "^0.7.0",
