--- a/.env_example
+++ b/.env_example
@@ -7,7 +7,7 @@ SERVER_PORT=1337
 # The port on which to run the client bundle dev server (i.e. used during
 # development only).
 # NOT WORKING YET
-# CLIENT_DEVSERVER_PORT=7331
+# DEV_SERVER_PORT=7331
 
 
 PIMATIC_HOST=localhost
