--- a/package.json
+++ b/package.json
@@ -41,6 +41,11 @@
   },
   "devDependencies": {
     "@blueprintjs/core": "^1.7.0",
+    "babel-core": "^6.22.1",
+    "babel-loader": "^6.2.10",
+    "babel-preset-es2015": "^6.22.0",
+    "babel-preset-react": "^6.22.0",
+    "babel-preset-stage-0": "^6.22.0",
     "clean-webpack-plugin": "^0.1.15",
     "coffee-loader": "^0.7.2",
     "css-loader": "^0.26.1",
@@ -53,18 +58,21 @@
     "node-sass": "^4.4.0",
     "npm-install-webpack-plugin": "^4.0.4",
     "purifycss-webpack": "^0.4.2",
+    "react-hot-loader": "^3.0.0-beta.6",
     "sass-loader": "^4.1.1",
     "style-loader": "^0.13.1",
     "uglify-js": "^2.7.5",
     "uglifyjs-webpack-plugin": "^0.1.2",
     "url-loader": "^0.5.7",
     "webpack": "^2.2.0",
+    "webpack-dev-server": "2.1.0-beta.0",
     "webpack-merge": "^2.6.1"
   },
   "scripts": {
     "start-server-dev": "NODE_ENV=development coffee server/index.coffee",
     "start-server-prod": "NODE_ENV=production coffee server/index.coffee",
     "build-editor": "webpack -p --config ./webpack/client.prod.coffee",
+    "development": "webpack-dev-server --config ./webpack/client.dev.coffee --host 0.0.0.0",
     "start": "npm run build-editor && npm run start-server-prod"
   }
 }
