--- a/package.json
+++ b/package.json
@@ -9,10 +9,12 @@
   "dependencies": {
     "101": "^1.6.2",
     "body-parser": "^1.16.0",
+    "camelcase": "^4.0.0",
     "compression": "^1.6.2",
     "dotenv": "^4.0.0",
     "express": "^4.14.1",
     "express-device": "^0.4.2",
+    "firebase": "^1.1.3",
     "graphql": "^0.9.1",
     "graphql-sequelize": "^5.0.0",
     "graphql-server-express": "^0.5.2",
@@ -56,6 +58,7 @@
     "glob": "^7.1.1",
     "graphql-relay": "^0.5.1",
     "happypack": "^3.0.2",
+    "mobx-remotedev": "^0.2.5",
     "node-sass": "^4.4.0",
     "nodemon": "^1.11.0",
     "npm-install-webpack-plugin": "^4.0.4",
