--- a/.env_example
+++ b/.env_example
@@ -4,13 +4,19 @@ SERVER_HOST=localhost
 # The port on which to run the server.
 SERVER_PORT=1337
 
-# The port on which to run the client bundle dev server (i.e. used during
-# development only).
 # NOT WORKING YET
 # DEV_SERVER_PORT=7331
 
+# PIMATIC integartion
 
 PIMATIC_HOST=localhost
 PIMATIC_PORT=8080
 PIMATIC_USERNAME=admin
 PIMATIC_PASSWORD=admin
+
+
+
+# NEST Home Thermostat Integration
+# Need to obtain access taken from nest developer site.
+# Detailed instructions may follow one day.
+NEST_TOKEN=
