--- a/package.json
+++ b/package.json
@@ -3,7 +3,6 @@
   "version": "1.0.0",
   "description": "Home Automation Dashboard with GUI Designer",
   "main": "index.js",
-  "repository": "https://github.com/aap82/dashboard.git",
   "author": "aap82",
   "license": "MIT",
   "dependencies": {
@@ -31,6 +30,7 @@
     "rc-color-picker": "^1.1.3",
     "react": "^15.4.2",
     "react-addons-css-transition-group": "^15.4.2",
+    "react-color": "^2.11.1",
     "react-dom": "^15.4.2",
     "react-grid-layout": "^0.13.9",
     "react-split-pane": "^0.1.57",
@@ -58,6 +58,7 @@
     "glob": "^7.1.1",
     "graphql-relay": "^0.5.1",
     "happypack": "^3.0.2",
+    "mobx-react-devtools": "^4.2.11",
     "mobx-remotedev": "^0.2.5",
     "node-sass": "^4.4.0",
     "nodemon": "^1.11.0",
