--- a/package.json
+++ b/package.json
@@ -17,21 +17,26 @@
     "graphql": "^0.9.1",
     "graphql-sequelize": "^5.0.0",
     "graphql-server-express": "^0.5.2",
+    "graphql-server-koa": "^0.6.0",
     "graphql-server-module-operation-store": "^0.5.2",
     "hex-rgba": "^1.0.0",
     "isomorphic-fetch": "^2.2.1",
+    "koa": "2",
+    "koa-bodyparser": "next",
+    "koa-pug": "^3.0.0-2",
+    "koa-router": "next",
+    "koa-useragent": "^0.1.5",
     "lodash.keyby": "^4.6.0",
     "mobx": "^3.0.2",
     "mobx-react": "^4.1.0",
     "node-json-transform": "^1.0.13",
     "normalize.css": "^5.0.0",
     "path": "^0.12.7",
-    "pug": "^2.0.0-beta10",
     "rc-color-picker": "^1.1.3",
+    "pug": "^2.0.0-beta10",
     "react": "^15.4.2",
-    "react-addons-css-transition-group": "^15.4.2",
-    "react-color": "^2.11.1",
     "react-dom": "^15.4.2",
+    "react-addons-css-transition-group": "^15.4.2",
     "react-grid-layout": "^0.13.9",
     "react-split-pane": "^0.1.57",
     "react-tappable": "^0.8.4",
@@ -58,8 +63,10 @@
     "glob": "^7.1.1",
     "graphql-relay": "^0.5.1",
     "happypack": "^3.0.2",
+    "koa-webpack-middleware": "^1.0.3",
     "mobx-react-devtools": "^4.2.11",
     "mobx-remotedev": "^0.2.5",
+    "mobx-utils": "^2.0.1",
     "node-sass": "^4.4.0",
     "nodemon": "^1.11.0",
     "npm-install-webpack-plugin": "^4.0.4",
