--- a/package.json
+++ b/package.json
@@ -7,13 +7,17 @@
   "license": "MIT",
   "dependencies": {
     "101": "^1.6.2",
+    "arangojs": "5",
+    "asyncawait": "^1.0.6",
     "body-parser": "^1.16.0",
     "camelcase": "^4.0.0",
+    "coffee-script": "^1.12.4",
+    "color": "^1.0.3",
     "compression": "^1.6.2",
     "dotenv": "^4.0.0",
     "express": "^4.14.1",
     "express-device": "^0.4.2",
-    "firebase": "^1.1.3",
+    "firebase": "1.1.3",
     "graphql": "^0.9.1",
     "graphql-sequelize": "^5.0.0",
     "graphql-server-express": "^0.5.2",
@@ -32,15 +36,16 @@
     "node-json-transform": "^1.0.13",
     "normalize.css": "^5.0.0",
     "path": "^0.12.7",
-    "rc-color-picker": "^1.1.3",
     "pug": "^2.0.0-beta10",
+    "rc-color-picker": "^1.1.3",
     "react": "^15.4.2",
-    "react-dom": "^15.4.2",
     "react-addons-css-transition-group": "^15.4.2",
+    "react-dom": "^15.4.2",
     "react-grid-layout": "^0.13.9",
     "react-split-pane": "^0.1.57",
     "react-tappable": "^0.8.4",
     "sequelize": "^3.30.0",
+    "serializr": "^1.1.9",
     "socket-io": "^1.0.0",
     "socket.io-client": "^1.7.2",
     "sqlite": "^2.2.4",
@@ -79,7 +84,8 @@
     "url-loader": "^0.5.7",
     "webpack": "^2.2.0",
     "webpack-dev-server": "2.1.0-beta.0",
-    "webpack-merge": "^2.6.1"
+    "webpack-merge": "^2.6.1",
+    "why-did-you-update": "0.0.8"
   },
   "scripts": {
     "start-server-dev": "NODE_ENV=development nodemon --watch server server/index.coffee",
