--- a/.env_example
+++ b/.env_example
@@ -15,7 +15,7 @@ PIMATIC_PORT=8080
 PIMATIC_USERNAME=admin
 PIMATIC_PASSWORD=admin
 
-
+MONGO_DB=mongodb://localhost:27017/dashboard_app
 
 # NEST Home Thermostat Integration
 # Need to obtain access taken from nest developer site.
