--- a/package.json
+++ b/package.json
@@ -19,20 +19,25 @@
     "express-device": "^0.4.2",
     "firebase": "1.1.3",
     "graphql": "^0.9.1",
-    "graphql-sequelize": "^5.0.0",
-    "graphql-server-express": "^0.5.2",
+    "graphql-compose": "^1.15.0",
+    "graphql-compose-connection": "^2.1.3",
+    "graphql-compose-mongoose": "^1.4.8",
     "graphql-server-koa": "^0.6.0",
     "graphql-server-module-operation-store": "^0.5.2",
     "hex-rgba": "^1.0.0",
     "isomorphic-fetch": "^2.2.1",
     "koa": "2",
     "koa-bodyparser": "next",
+    "koa-compose": "^2.5.1",
     "koa-pug": "^3.0.0-2",
     "koa-router": "next",
     "koa-useragent": "^0.1.5",
+    "lodash.flatten": "^4.4.0",
     "lodash.keyby": "^4.6.0",
+    "lodash.uniq": "^4.5.0",
     "mobx": "^3.0.2",
     "mobx-react": "^4.1.0",
+    "mongoose": "^4.8.6",
     "node-json-transform": "^1.0.13",
     "normalize.css": "^5.0.0",
     "path": "^0.12.7",
@@ -44,12 +49,11 @@
     "react-grid-layout": "^0.13.9",
     "react-split-pane": "^0.1.57",
     "react-tappable": "^0.8.4",
-    "sequelize": "^3.30.0",
     "serializr": "^1.1.9",
     "socket-io": "^1.0.0",
     "socket.io-client": "^1.7.2",
-    "sqlite": "^2.2.4",
-    "teact": "^1.2.0"
+    "teact": "^1.2.0",
+    "uuid": "^3.0.1"
   },
   "devDependencies": {
     "@blueprintjs/core": "^1.7.0",
