--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "react-grid-layout": "^0.13.9",
     "react-number-editor": "^4.0.2",
     "react-split-pane": "^0.1.57",
+    "react-swipeable-views": "^0.11.2",
     "react-tappable": "^0.8.4",
     "serializr": "^1.1.9",
     "socket-io": "^1.0.0",
