--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "coffee-script": "^1.12.4",
     "color": "^1.0.3",
     "compression": "^1.6.2",
+    "dark-sky": "^1.0.10",
     "dotenv": "^4.0.0",
     "express": "^4.14.1",
     "express-device": "^0.4.2",
@@ -27,6 +28,7 @@
     "graphql-server-koa": "^0.6.0",
     "graphql-server-module-operation-store": "^0.5.2",
     "hex-rgba": "^1.0.0",
+    "hoist-non-react-statics": "^1.2.0",
     "isomorphic-fetch": "^2.2.1",
     "koa": "2",
     "koa-bodyparser": "next",
@@ -42,6 +44,7 @@
     "lodash.uniq": "^4.5.0",
     "mobx": "^3.0.2",
     "mobx-react": "^4.1.0",
+    "moment": "^2.18.1",
     "mongoose": "^4.8.6",
     "node-json-transform": "^1.0.13",
     "normalize.css": "^5.0.0",
@@ -56,6 +59,7 @@
     "react-split-pane": "^0.1.57",
     "react-swipeable-views": "^0.11.2",
     "react-tappable": "^0.8.4",
+    "react-weathericons": "^1.0.3",
     "serializr": "^1.1.9",
     "socket-io": "^1.0.0",
     "socket.io-client": "^1.7.2",
