--- a/package.json
+++ b/package.json
@@ -22,11 +22,11 @@
     "express-device": "^0.4.2",
     "firebase": "1.1.3",
     "graphql": "^0.9.1",
-    "graphql-compose": "^1.15.0",
+    "graphql-compose": "^1.18.0",
     "graphql-compose-connection": "^2.1.3",
     "graphql-compose-mongoose": "^1.4.8",
     "graphql-server-koa": "^0.6.0",
-    "graphql-server-module-operation-store": "^0.5.2",
+    "graphql-server-module-operation-store": "^0.6.0",
     "hex-rgba": "^1.0.0",
     "hoist-non-react-statics": "^1.2.0",
     "isomorphic-fetch": "^2.2.1",
@@ -44,6 +44,7 @@
     "lodash.uniq": "^4.5.0",
     "mobx": "^3.0.2",
     "mobx-react": "^4.1.0",
+    "mobx-react-form": "^1.22.0",
     "moment": "^2.18.1",
     "mongoose": "^4.8.6",
     "node-json-transform": "^1.0.13",
@@ -54,9 +55,9 @@
     "react": "^15.4.2",
     "react-addons-css-transition-group": "^15.4.2",
     "react-dom": "^15.4.2",
-    "react-grid-layout": "^0.13.9",
+    "react-grid-layout": "^0.14.4",
     "react-number-editor": "^4.0.2",
-    "react-split-pane": "^0.1.57",
+    "react-split-pane": "^0.1.61",
     "react-swipeable-views": "^0.11.2",
     "react-tappable": "^0.8.4",
     "react-weathericons": "^1.0.3",
@@ -64,10 +65,11 @@
     "socket-io": "^1.0.0",
     "socket.io-client": "^1.7.2",
     "teact": "^1.2.0",
-    "uuid": "^3.0.1"
+    "uuid": "^3.0.1",
+    "validatorjs": "^3.11.0"
   },
   "devDependencies": {
-    "@blueprintjs/core": "^1.7.0",
+    "@blueprintjs/core": "^1.13.0",
     "babel-core": "^6.22.1",
     "babel-loader": "^6.2.10",
     "babel-plugin-transform-object-rest-spread": "^6.23.0",
@@ -91,7 +93,7 @@
     "mobx-react-devtools": "^4.2.11",
     "mobx-remotedev": "^0.2.5",
     "mobx-utils": "^2.0.1",
-    "node-sass": "^4.4.0",
+    "node-sass": "^4.5.1",
     "nodemon": "^1.11.0",
     "npm-install-webpack-plugin": "^4.0.4",
     "purifycss-webpack": "^0.4.2",
@@ -101,7 +103,7 @@
     "uglify-js": "^2.7.5",
     "uglifyjs-webpack-plugin": "^0.1.2",
     "url-loader": "^0.5.7",
-    "webpack": "^2.2.0",
+    "webpack": "^2.3.2",
     "webpack-dev-server": "2.1.0-beta.0",
     "webpack-merge": "^2.6.1",
     "webpack-node-externals": "^1.5.4",
