--- a/package.json
+++ b/package.json
@@ -54,9 +54,12 @@
     "rc-color-picker": "^1.1.3",
     "react": "^15.4.2",
     "react-addons-css-transition-group": "^15.4.2",
+    "react-color": "^2.11.4",
+    "react-colorizer": "^0.1.6",
     "react-dom": "^15.4.2",
     "react-grid-layout": "^0.14.4",
     "react-number-editor": "^4.0.2",
+    "react-rnd": "^4.2.2",
     "react-split-pane": "^0.1.61",
     "react-swipeable-views": "^0.11.2",
     "react-tappable": "^0.8.4",
