--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "license": "MIT",
   "dependencies": {
     "101": "^1.6.2",
+    "animakit-expander": "^2.1.0",
     "arangojs": "5",
     "asyncawait": "^1.0.6",
     "babel-plugin-transform-decorators-legacy": "^1.3.4",
@@ -16,6 +17,7 @@
     "coffee-script": "^1.12.4",
     "color": "^1.0.3",
     "compression": "^1.6.2",
+    "create-react-class": "^15.5.1",
     "dark-sky": "^1.0.10",
     "dotenv": "^4.0.0",
     "express": "^4.14.1",
