--- a/package.json
+++ b/package.json
@@ -8,7 +8,6 @@
   "dependencies": {
     "101": "^1.6.2",
     "animakit-expander": "^2.1.0",
-    "arangojs": "5",
     "asyncawait": "^1.0.6",
     "babel-plugin-transform-decorators-legacy": "^1.3.4",
     "body-parser": "^1.16.0",
@@ -20,8 +19,6 @@
     "create-react-class": "^15.5.1",
     "dark-sky": "^1.0.10",
     "dotenv": "^4.0.0",
-    "express": "^4.14.1",
-    "express-device": "^0.4.2",
     "firebase": "1.1.3",
     "graphql": "^0.9.1",
     "graphql-compose": "^1.18.0",
@@ -57,10 +54,8 @@
     "react": "^15.4.2",
     "react-addons-css-transition-group": "^15.4.2",
     "react-color": "^2.11.4",
-    "react-colorizer": "^0.1.6",
     "react-dom": "^15.4.2",
     "react-grid-layout": "^0.14.4",
-    "react-number-editor": "^4.0.2",
     "react-rnd": "^4.2.2",
     "react-split-pane": "^0.1.61",
     "react-swipeable-views": "^0.11.2",
@@ -70,6 +65,7 @@
     "socket-io": "^1.0.0",
     "socket.io-client": "^1.7.2",
     "teact": "^1.2.0",
+    "useragent": "^2.1.13",
     "uuid": "^3.0.1",
     "validatorjs": "^3.11.0"
   },
@@ -87,7 +83,6 @@
     "clean-webpack-plugin": "^0.1.15",
     "coffee-loader": "^0.7.2",
     "css-loader": "^0.26.1",
-    "express": "^4.14.1",
     "extract-text-webpack-plugin": "^2.0.0-rc.2",
     "file-loader": "^0.10.0",
     "getenv": "^0.7.0",
@@ -96,7 +91,6 @@
     "happypack": "^3.0.2",
     "koa-webpack-middleware": "^1.0.3",
     "mobx-react-devtools": "^4.2.11",
-    "mobx-remotedev": "^0.2.5",
     "mobx-utils": "^2.0.1",
     "node-sass": "^4.5.1",
     "nodemon": "^1.11.0",
@@ -110,7 +104,7 @@
     "url-loader": "^0.5.7",
     "webpack": "^2.3.2",
     "webpack-dev-server": "2.1.0-beta.0",
-    "webpack-merge": "^2.6.1",
+    "webpack-merge": "^4.1.0",
     "webpack-node-externals": "^1.5.4",
     "why-did-you-update": "0.0.8"
   },
